# Projet_6

./: df_model.csv  df_model_bento.csv  projet_6_exploration.ipynb  projet_6_modelisation.ipynb
.ipynb_checkpoints/: projet_6_exploration-checkpoint.ipynb  projet_6_propre-checkpoint.ipynb  🧠 FICHE DE RÉVISION — OPÉRATIONS C-checkpoint.txt
seattle_api/: .gitignore  README_API.md  bentofile.yaml  client_example.py  pyproject.toml  requirements.txt  save_model.py  schemas.py  service.py
