[project]
name = "seattle-api"
version = "0.1.0"
description = ""
authors = [
    {name = "matmatmat777", email = "matdelmas@gmail.com"}
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "bentoml (==1.4.28)",
    "numpy (==1.26.4)",
    "pandas (==2.2.2)",
    "scikit-learn (==1.3.2)",
    "pydantic (>=2.0,<3.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
